--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,19 @@ h1 {
     color: #292B76;
     text-align: center;
 }
+about {
+    color: #292B76;
+    text-align: center;
+}
+skills {
+    color: #292B76;
+    text-align: center;
+}
+projects {
+    color: #292B76;
+    text-align: center;
+}
+contact {
+    color: #292B76;
+    text-align: center;
+}
