--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,19 @@ h1 {
     color: #292B76;
     text-align: center;
 }
-about {
+.about {
     color: #292B76;
     text-align: center;
 }
-skills {
+.skills {
     color: #292B76;
     text-align: center;
 }
-projects {
+.projects {
     color: #292B76;
     text-align: center;
 }
-contact {
+.contact {
     color: #292B76;
     text-align: center;
 }
